--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -163,7 +163,10 @@
       padding: 60px 15px;
     }
     .text-wrapper {
-      width: 75%;
+      width: 95%;
+    }
+    .cid-s7SZ0UvBBv .iconBackground {
+      display: none;
     }
     .timeline-header {
       margin-top: 1.65rem;
